# FinanceAnalysys

./: .gitignore  BUG_FIX_REPORT.md  CHANGELOG.md  COMPLETION_SUMMARY.md  Dockerfile  PERCENTAGE_FIX_REPORT.md  PRICE_CHANGE_SELECTOR_IMPLEMENTATION.md  README.md  README_NEW_ARCHITECTURE.md  VALIDATION_REPORT.md  basic_data_fetch.py  mcp_server_example.py  prophet_ml_train_and_prediction.py  pyproject.toml  pytorch_lstm_prediction.py  requirements.txt  sarima_ml_train_and_prediction.py  simple_backtest.py  streamlit_app.py  technical_analysis_app.py
.github/workflows/: deploy-pages.yml  deploy_pages.yml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_conventions.md  suggested_commands.md
api/: .placeholder  main.py
config/: analysis_config.yaml  api_config.yaml  backtest_config.yaml  training_config.yaml
docs/: features.md  github_pages_deployment.md
examples/: basic_data_fetch.py  prophet_ml_train_and_prediction.py  pytorch_lstm_prediction.py  sarima_ml_train_and_prediction.py  simple_backtest.py
projects/sample_prj/: config.json
scripts/: .placeholder  predict.py  run_analysis.py  run_backtest.py  run_streamlit_uv.ps1  train_model.py
src/analysis/: fundamental_metrics.py  technical_indicators.py
src/analysis/fundamental/: calc_fundamanta.py
src/analysis/technical/: calc_technical.py
src/apps/: backtest_app.py  basic_analysis_app.py  prophet_app.py
src/backtesting/: __init__.py  engine.py  performance.py  strategy.py
src/core/: __init__.py  exceptions.py  models.py
src/data/: data_fetcher.py  fundamentals.py
src/ml_analysis/: feature_engineering.py  prediction.py  preprocessing.py  training.py
src/services/: __init__.py  cache_manager.py  fundamental_service.py  technical_service.py
src/utils/: config_loader.py  price_change.py  timeframes.py
src/visualization/: export_handler.py  simple_plot.py  visualizer.py
tests/: test_backtest_engine.py  test_backtesting_data_fetcher.py  test_candlestick.py  test_performance.py  test_run_backtest_script.py  test_strategies.py  test_technical_indicators.py
(+7 files in other folders)
